--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   },
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/swagger": "^11.2.0",
     "nestjs-pino": "^4.4.0",
     "pino-http": "^10.4.0"
   }
