--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.17.43",
     "@types/passport-facebook": "^3.0.3",
@@ -94,7 +95,8 @@
   },
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/swagger": "7.1.16",
+    "express-session": "^1.18.1",
     "nestjs-pino": "^4.4.0",
     "pino-http": "^10.4.0"
   }
