feat: add admin module with user management and analytics features
- Introduced AdminModule with AdminController and AdminService for managing users and subscriptions.
- Implemented user listing, detail retrieval, updating, blocking, and deleting functionalities.
- Added endpoints for exporting and importing users.
- Created analytics endpoints for user growth, revenue, and subscription metrics.
- Implemented admin-only access control using AdminOnlyGuard.
- Added logging of admin activities with AdminActivityInterceptor.
- Enhanced AuthService to support admin functionalities for user management.
- Updated RegisterDto to include admin-specific fields for user creation.
- Added roles and permissions management with RolesGuard and roles decorator.
- Updated user schema to include blocked status.
- Refactored existing code for better organization and maintainability.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.43",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-github": "^1.1.12",
@@ -96,8 +97,11 @@
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/swagger": "7.1.16",
+    "csv-writer": "^1.6.0",
     "express-session": "^1.18.1",
+    "multer": "1.4.5-lts.2",
     "nestjs-pino": "^4.4.0",
-    "pino-http": "^10.4.0"
+    "pino-http": "^10.4.0",
+    "xlsx": "^0.18.5"
   }
 }
