--- a/package.json
+++ b/package.json
@@ -97,11 +97,13 @@
   "dependencies": {
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/swagger": "7.1.16",
+    "body-parser": "^2.2.0",
     "csv-writer": "^1.6.0",
     "express-session": "^1.18.1",
     "multer": "1.4.5-lts.2",
     "nestjs-pino": "^4.4.0",
     "pino-http": "^10.4.0",
+    "stripe": "^14.3.0",
     "xlsx": "^0.18.5"
   }
 }
